--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
